--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="menu">
-        <a href="templete.html">Página Principal</a>
+        <a href="index.html">Página Principal</a>
         <a href="sobre.html">Sobre a Clínica</a>
         <a href="horarios.html">Horário de Atendimento</a>
         <a href="contato.html">Contato</a>
